nst/src/snapshots/transmute_nst__exit_points_resolver__tests__always_returns_from_while_condition.snap
---
source: nst/src/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 3:18; [34, 38],
                    },
                ),
                span: 3:18; [34, 38],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 3:29; [45, 47],
                    },
                ),
                span: 3:29; [45, 47],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 3:23; [39, 50],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Literal(
                    Literal {
                        kind: Number(43),
                        span: 3:46; [62, 64],
                    },
                ),
                span: 3:46; [62, 64],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [
                        StmtId(2),
                    ],
                ),
                span: 3:40; [56, 67],
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: If(
                    ExprId(0),
                    ExprId(2),
                    Some(
                        ExprId(4),
                    ),
                ),
                span: 3:15; [31, 67],
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: Literal(
                    Literal {
                        kind: Number(44),
                        span: 4:17; [86, 88],
                    },
                ),
                span: 4:17; [86, 88],
            },
            ExprId(7) => Expression {
                id: ExprId(7),
                kind: Block(
                    [
                        StmtId(3),
                    ],
                ),
                span: 3:52; [68, 99],
            },
            ExprId(8) => Expression {
                id: ExprId(8),
                kind: While(
                    ExprId(5),
                    ExprId(7),
                ),
                span: 3:9; [25, 99],
            },
            ExprId(9) => Expression {
                id: ExprId(9),
                kind: Literal(
                    Literal {
                        kind: Number(45),
                        span: 6:13; [112, 114],
                    },
                ),
                span: 6:13; [112, 114],
            },
            ExprId(10) => Expression {
                id: ExprId(10),
                kind: Block(
                    [
                        StmtId(4),
                        StmtId(5),
                    ],
                ),
                span: 2:15; [15, 121],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(6),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Ret(
                    Some(
                        ExprId(1),
                    ),
                    Explicit,
                ),
                span: 3:25; [41, 48],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Ret(
                    Some(
                        ExprId(3),
                    ),
                    Explicit,
                ),
                span: 3:42; [58, 65],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Ret(
                    Some(
                        ExprId(6),
                    ),
                    Explicit,
                ),
                span: 4:13; [82, 89],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Expression(
                    ExprId(8),
                ),
                span: 3:9; [25, 99],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Ret(
                    Some(
                        ExprId(9),
                    ),
                    Explicit,
                ),
                span: 6:9; [108, 115],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(10),
                ),
                span: 2:5; [5, 121],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
    [
        (
            ExprId(2),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(1),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(4),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(3),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(7),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(6),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(10),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(1),
                        ),
                    ),
                    Explicit(
                        Some(
                            ExprId(3),
                        ),
                    ),
                ],
                unreachable: [
                    ExprId(7),
                    ExprId(9),
                ],
            },
        ),
    ],
)
