nst/src/snapshots/transmute_nst__exit_points_resolver__tests__array_instantiation.snap
---
source: nst/src/exit_points_resolver.rs
expression: "(ast, block_exit_points)"
---
(
    Ast {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
            IdentId(2) => "a",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 3:21; [35, 39],
                    },
                ),
                span: 3:21; [35, 39],
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 3:32; [46, 47],
                    },
                ),
                span: 3:32; [46, 47],
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Block(
                    [
                        StmtId(1),
                    ],
                ),
                span: 3:26; [40, 50],
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 3:48; [62, 63],
                    },
                ),
                span: 3:48; [62, 63],
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Block(
                    [
                        StmtId(2),
                    ],
                ),
                span: 3:42; [56, 66],
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: If(
                    ExprId(0),
                    ExprId(2),
                    Some(
                        ExprId(4),
                    ),
                ),
                span: 3:18; [32, 66],
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: ArrayInstantiation(
                    [
                        ExprId(5),
                    ],
                ),
                span: 3:17; [31, 67],
            },
            ExprId(7) => Expression {
                id: ExprId(7),
                kind: Literal(
                    Literal {
                        kind: Number(2),
                        span: 4:13; [81, 82],
                    },
                ),
                span: 4:13; [81, 82],
            },
            ExprId(8) => Expression {
                id: ExprId(8),
                kind: Block(
                    [
                        StmtId(3),
                        StmtId(4),
                    ],
                ),
                span: 2:13; [13, 89],
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                    },
                    InputId(0),
                    [
                        StmtId(5),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Ret(
                    Some(
                        ExprId(1),
                    ),
                    Explicit,
                ),
                span: 3:28; [42, 48],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Ret(
                    Some(
                        ExprId(3),
                    ),
                    Explicit,
                ),
                span: 3:44; [58, 64],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Let(
                    Identifier {
                        id: IdentId(2),
                        span: 3:13; [27, 28],
                    },
                    ExprId(6),
                ),
                span: 3:9; [23, 68],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Ret(
                    Some(
                        ExprId(7),
                    ),
                    Explicit,
                ),
                span: 4:9; [77, 83],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:9; [9, 10],
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                    },
                    ExprId(8),
                ),
                span: 2:5; [5, 89],
            },
        ],
        type_defs: [],
        root: StmtId(0),
    },
    [
        (
            ExprId(2),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(1),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(4),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(3),
                        ),
                    ),
                ],
                unreachable: [],
            },
        ),
        (
            ExprId(8),
            Output {
                exit_points: [
                    Explicit(
                        Some(
                            ExprId(1),
                        ),
                    ),
                    Explicit(
                        Some(
                            ExprId(3),
                        ),
                    ),
                ],
                unreachable: [
                    ExprId(7),
                ],
            },
        ),
    ],
)
